Correction version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ p {
 
 /**********SECTION RESTO*********/
 .resto {
-  width: 80%;
+  width: 100%;
   background-color: #f6f6f6;
   margin: auto;
   padding: 0;
