--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -161,7 +161,7 @@ p {
 }
 /**********SECTION RESTO*********/
 .resto {
-  width: 80%;
+  width: 100%;
   background-color: $restoColor;
   margin: auto;
   padding: 0;
